# regex-stack-size

./: Cargo.toml  README.md
src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
