[package]
name = "regex-stack-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlimit = "0.10.1"
regex = { git = "https://github.com/Palkovsky/regex.git", branch = "make-perf-literal-nostd", default-features = false, features = ["perf", "unicode"] }