[package]
name = "regex-stack-size"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["xtask"]

[lib]
name = "evalregex"
path = "src/lib.rs"

[[bin]]
name = "regex-stack-size"
path = "src/main.rs"

[profile.release]
debug = true
lto = 'fat'

[dependencies]
rlimit = "0.10.1"
regex = { version = "1.10.2", default-features = false, features = ["perf", "perf-dfa-full", "unicode"] }
